--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Countdown Timer</title>
+  <title>😢</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <div class="container">
-  <h1 id="headline">Countdown to my birthday</h1>
+  <h1 id="headline">Countdown to Eitan</h1>
   <div id="countdown">
     <ul>
       <li><span id="days"></span>days</li>
@@ -17,7 +17,7 @@
       <li><span id="seconds"></span>Seconds</li>
     </ul>
   </div>
-  <button openpopup="#popUpA" class="btn btn--primary" onclick="window.location.href='#announcement'" id="notifications" class="notifications notifications--active" type="button"></button>
+  <button openpopup="#popUpA" class="btn btn--primary" onclick="conf()" id="notifications" class="notifications notifications--active" type="button">                  </button>
   <div id="content" class="emoji">
     <span>🥳</span>
     <span>🎉</span>
@@ -30,7 +30,8 @@
     <div class="popup-content">
       <a href="#" class="close">&times;</a>
       <h3>announcement</h3>
-      <p> 4.08.22 - טוב אז השעה היא 4:30 בבוקר ואני מקווה שיום אחד תקרא את זה בקיצור אני עייף מת ואני עובד מחר אבל אני מניח שאני לא היחיד שמחכה לאיתן אז עלה לי רעיון עכשיו אני לא יודע מה היה הרעיון אבל עכשיו אני מקבל מודעות שפשוט העתקתי דברים מכל מניני מקומות ואני רואה את זה על המסך  מקווה שאתה נהנה שם וכל פעם שמשעמם לי אני פשוט יוסיף לפו דברים ותאמין לי שמשעמם לי<hr> 25.04.22 update - Fixed a bug that did not allow site users to view music sheets for songs</p>
+      <p> 04.08.22 - טוב אז השעה היא 4:30 בבוקר ואני מקווה שיום אחד תקרא את זה בקיצור אני עייף מת ואני עובד מחר אבל אני מניח שאני לא היחיד שמחכה לאיתן אז עלה לי רעיון עכשיו אני לא יודע מה היה הרעיון אבל עכשיו אני מקבל מודעות שפשוט העתקתי דברים מכל מניני מקומות ואני רואה את זה על המסך מקווה שאתה נהנה שם וכל פעם שמשעמם לי אני פשוט יוסיף לפו דברים ותאמין לי שמשעמם לי<hr>
+        06.08.22 - בוקר טוב לכולם אתמול התעוררתי ונכנסתי לויאס בקיצור אני נכנס ואני רואה את זה כאילו הייתי בטוח שכל זה היה חלום אבל מסתבר שלא תהנה</p>
     </div>
   </div>
   
